manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: "241661649258.dkr.ecr.eu-west-2.amazonaws.com/k8s-ecr:04e43f609684d57d766fef7e697d2f337d4060d7"
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet: {path: "/", port: http}
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: {path: "/", port: http}
            initialDelaySeconds: 10
            periodSeconds: 20
