manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: apps
spec:
  selector:
    app: myapp 
  ports:
    - name: http
      port: 80
      targetPort: http    # -> containerPort 80 by name
  type: ClusterIP
---
