manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    # # ingress allows more time for slow endpoints
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30" 
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["coderco.lab.ridwanahmed.com"]
      secretName: shiori
  rules:
    - host: coderco.lab.ridwanahmed.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 80
